fixed alignment for submit button

--- a/css/style.css
+++ b/css/style.css
@@ -399,5 +399,8 @@ button svg {
 }
 
 button span {
+  display:flex;
+  justify-content: center;
+  align-items: center;
   transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
 }
